Added a download button for xml on doc page.
 Also added logical searches, has trouble with AND (ftand) which was mentioned on the documentation as potentially memory hungry. Can only assume that it is a memory issue with my hardware as other people are not having this issue.

 Also added upload feature on main page! these are saved into /colenso/ the address is not more specific, assumed that this could be sorted by an admin.

--- a/views/docdisplay.jade
+++ b/views/docdisplay.jade
@@ -4,6 +4,7 @@ block link
     -var selected = 'Search';
 
 block content
+    -var downloadLink = '/download?file=' + name;
     .panel.panel-primary
         .panel-heading
             p Result
@@ -12,3 +13,5 @@ block content
     .well
         p raw xml
         pre(xml:lang='en') #{document}
+
+    a.btn.btn-default(href= downloadLink) Download
